--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
+    "mqtt": "^5.7.0",
     "next": "14.2.3",
+    "playwright": "^1.44.1",
     "react": "^18",
     "react-dom": "^18"
   },
