--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
+    "colors": "^1.4.0",
     "mqtt": "^5.7.0",
     "next": "14.2.3",
     "playwright": "^1.44.1",
